--- a/main.css
+++ b/main.css
@@ -10,19 +10,34 @@
 }
 
 .card {
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-evenly;
   margin-bottom: 35px;
   width: fit-content;
   align-content: center;
   
+  
 }
 
 .card-img-top {
-width: fit-content;
+display: flex;
+width: 200px;
+justify-content: center;
+
 }
 
 .row {
   align-content: center;
   padding-left: 150px;
+}
+
+.cardTitle {
+  border: 1px solid lightblue;
+  padding: 15px;
+  text-align: center;
+}
+
+.card-body {
+  border: 1px solid lightblue;
+  padding: 0px;
 }
