--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 .cardWrapper {
-  background-color: red;
+
   display: flex;
   flex-wrap: wrap;
   width: fit-content;
@@ -7,6 +7,10 @@
   /*align-content: center;*/
 
   
+}
+
+body{
+  background-color: red;
 }
 
 .card {
@@ -39,7 +43,7 @@ margin-right: 50%;
   margin-left: 25%;
   margin-right: 50%;
   position: absolute;
-  top: 20px
+  top: 20px;
   left: 20px;}
 
 .image2{
@@ -51,7 +55,7 @@ margin-right: 50%;
 .textfix {
   position: absolute;
   top: -100px;
-  left: -100px;x
+  left: -100px;
 }
 
 .specs{
@@ -83,11 +87,6 @@ margin-right: 50%;
   margin-top: 10px;
   padding: 2px;
   font-family: "Pacifico";
-  
-}
-
-.card-body3 {
-  ;
   
 }
 
